<resources>
    <string name="app_name">Composition</string>

    <string name="game_rules">Правила игры: \nПеред вами будет три фигуры, две снизу и одна сверху,
        в двух из них будут числа. \nНеобходимо чтобы сума чисел из двух нижних фигур была равна
        числу в верхней фигуре, для этого нужно вставить недостающие число.\n
        \nПример в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4.
        Значит на месте вопросительного знака должно быть число 3, потому что
        3 + 4 = 7.
    </string>
    <string name="title">Состав числа</string>
    <string name="b_next">Понятно</string>
    <string name="choose_level_tv">Выберите уровень:</string>
    <string name="test">Тестовый</string>
    <string name="b_easy">Легкий</string>
    <string name="b_normal">Средний</string>
    <string name="b_hard">Тяжолый</string>
    <string name="your_Score">Ваш счет: %s</string>
    <string name="percentage_correct_answers">Процент правельных ответов: %s</string>
    <string name="one_more_time">Попробовать снова</string>
    <string name="right_answers">Правельных ответов %s из %s необходимых</string>
    <string name="needed_percent_correct_answer">Необходимый процент правельных ответов: %s</string>
    <string name="correct_answers">Необходимое количество правельных ответов: %s</string>
    <string name="progress_answer">Правельных ответов %s (минимум %s)</string>
    <string name="unknown">\?</string>
</resources>